compiler/tests/compile-fail/misc-top-level-errors.rsp
(import [risp base])

(import (only [risp base] do))
       ;^^^^^^^^^^^^^^^^^^^^^ ERROR duplicate definition

1                    ;~ ERROR definition expected at the top-level of a module body
'foo                 ;~ ERROR definition expected at the top-level of a module body
(list)               ;~ ERROR definition expected at the top-level of a module body
(if true true false) ;~ ERROR definition expected at the top-level of a module body
(fn ())              ;~ ERROR definition expected at the top-level of a module body

(export unbound)
       ;^^^^^^^ ERROR unable to resolve symbol: `unbound`
        
(compile-error "Some message") ;~ ERROR Some message

(def x 1)
(def x 2)
    ;^ ERROR duplicate definition

(deftype x Int)
        ;^ ERROR duplicate definition

; This is special because it's part of our prelude
(def import 5)
    ;^^^^^^ ERROR duplicate definition